App-CD-Pipeline/aks-manifest/kubernetes-templates/deployment.yaml
# Based upon resources provided in Microsoft's documentation: https://docs.microsoft.com/en-us/azure/aks/ingress-basic?tabs=azure-cli
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld

spec:
  replicas: 1
  selector:
    matchLabels:
      app: aks-helloworld
  template:
    metadata:
      labels:
        app: aks-helloworld
    spec:
      containers:
      - name: aks-helloworld
        image: e880613/demoapi:644
        ports:
        - containerPort: 80
